# CGCourse

./: .gitignore  CMakeLists.txt  README.md  main.cpp
aux/: camera.h  mesh.h  shader.h
class/: block.cpp  block.h  box.cpp  box.h  light.cpp  light.h  map.cpp  map.h  maze.cpp  maze.h  plane.cpp  plane.h  skybox.cpp  skybox.h  triangular_prism.cpp  triangular_prism.h  type.h
glad/include/glad/: glad.h
glad/src/: glad.c
resources/objects/moon/: moon+lowpoly.mtl
resources/stone/: rock1.mtl
shaders/: block_shader.fs  block_shader.vs  light_shader.fs  light_shader.vs  model.fs  ourShader.vs  plane.fs  plane.vs
src/: camera.h  model.h  obj_load.h  obj_out.h  screenshot.cpp  screenshot.h  stb_image.cpp
